// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component matches snapshot with \`disabled\` 1`] = `
<div
  className="main-input main-input--disabled"
>
  <div
    className="relative"
  >
    <input
      className="main-input__field"
      disabled={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Input component matches snapshot with \`kind: search\` 1`] = `
<div
  className="main-input main-input--search"
>
  <div
    className="relative"
  >
    <input
      className="main-input__field"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input component matches snapshot with \`size: small\` 1`] = `
<div
  className="main-input main-input--sm"
>
  <div
    className="relative"
  >
    <input
      className="main-input__field"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input component matches snapshot with default props 1`] = `
<div
  className="main-input"
>
  <div
    className="relative"
  >
    <input
      className="main-input__field"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input component matches snapshot with label 1`] = `
<div
  className="main-input"
>
  <label
    className="main-input__label"
  >
    <Memo(FormattedMessage)
      id="shared.ok"
    />
  </label>
  <div
    className="relative"
  >
    <input
      className="main-input__field"
      disabled={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input component matches snapshot with string placeholder 1`] = `
<div
  className="main-input"
>
  <div
    className="relative"
  >
    <input
      className="main-input__field"
      disabled={false}
      placeholder="Fake placeholder"
      type="text"
    />
  </div>
</div>
`;
